--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "theme_color": "#faf4f4",
     "icons": [
       {
-        "src": "/images/icon-192x192.png",
+        "src": "assets/images/age-calculator-high-resolution-logo.png",
         "sizes": "192x192",
         "type": "image/png"
       },
