--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
         "type": "image/png"
       },
       {
-        "src": "/images/icon-512x512.png",
+        "src": "assets/images/daycare.png",
         "sizes": "512x512",
         "type": "image/png"
       }
