--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "theme_color": "#faf4f4",
     "icons": [
       {
-        "src": "assets/images/age.png",
+        "src": "assets/images/cropped.jpg",
         "sizes": "192x192",
         "type": "image/png"
       },
