--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
         "type": "image/png"
       },
       {
-        "src": "assets/images/daycare.png",
+        "src": "/assets/images/CompressJPEG.online_512x512_image.png",
         "sizes": "512x512",
         "type": "image/png"
       }
