--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "theme_color": "#faf4f4",
     "icons": [
       {
-        "src": "assets/images/cropped.jpg",
+        "src": "/assets/images/daycare.png.192x192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
